keycloak/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: ${KEYCLOAK_NAMESPACE}
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: apps-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: apps-public
  hostnames:
  - ${KEYCLOAK_HOST}
  - ${KEYCLOAK_PUBLIC_HOST}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${KEYCLOAK_SERVICE_NAME}
      port: 80
